syntax = "proto3";

import "Size.proto";
import "Pixel.proto";

package frame.proto;

// Texture filter used in texture declaration.
message TextureFilter {
	enum Enum {
		INVALID                = 0;
		NEAREST                = 1;
		LINEAR                 = 2;
		NEAREST_MIPMAP_NEAREST = 3;
		LINEAR_MIPMAP_NEAREST  = 4;
		NEAREST_MIPMAP_LINEAR  = 5;
		LINEAR_MIPMAP_LINEAR   = 6;
		CLAMP_TO_EDGE          = 7;
		MIRRORED_REPEAT        = 8;
		REPEAT                 = 9;
	}
	Enum value = 1;
}

message Texture {
	// Name of the texture.
	string name = 1;
	// Size of the texture.
	Size size = 2;
	// Should it be a cleared texture?
	bool clear = 3;
	// Should we use mipmap?
	bool mipmap = 4;
	// Should it be a cubemap?
	bool cubemap = 5;

	// Format of the texture.
	PixelElementSize pixel_element_size = 10;
	PixelStructure pixel_structure = 11;

	// Filter for mirroring and texture sampling.
	TextureFilter min_filter = 21;
	TextureFilter mag_filter = 22;
	TextureFilter wrap_s = 23;
	TextureFilter wrap_t = 24;
	TextureFilter wrap_r = 25;

	// Pixel (if provided).
	bytes pixels = 30;

	// Load from a file.
	string file_name = 40;

	// Load from files.
	// This is suppose to represent the 6 face of a cube map.
	repeated string file_names = 41;
}

// Texture file.
message TextureFile {
	// Contain many textures.
	repeated Texture textures = 1;
}
